Fixed most intellij errors